# E3-mini-benchmark

./: .gitignore  CITATION.cff  FEWSHOT_COMPARISON.md  LATENCY_CURVE_README.md  LATEST_RESULTS_README.md  LICENSE  Makefile  Makefile_scaling  README.md  TTFT_TBT_SUMMARY.md  TTFT_TBT_UPDATE.md  debug_plot.py  pyproject.toml  requirements.txt  show_power_breakdown.py  test_ttft_tbt.sh  verify_setup.py
configs/bench/: infer_decoder.yaml  infer_decoder_scaling.yaml  infer_encoder.yaml  infer_encoder_scaling.yaml  infer_seq2seq.yaml  infer_seq2seq_scaling.yaml
configs/eval/: fewshot_0.yaml  fewshot_10.yaml  fewshot_5.yaml
configs/model/: bart-base.yaml  bert-base.yaml  bert-large.yaml  deberta-v3-base.yaml  distilbert-base.yaml  flan-t5-base.yaml  flan-t5-large.yaml  gemma-2-2b.yaml  gpt-neo-125m.yaml  gpt2-large.yaml  gpt2-medium.yaml  llama-3.2-1b.yaml  llama-3.2-3b.yaml  modernbert-base.yaml  opt-125m.yaml  opt-350m.yaml  qwen2.5-0.5b.yaml  qwen2.5-1.5b.yaml  roberta-base.yaml  switch-base-8.yaml  t5-base.yaml  t5-large.yaml
configs/task/: arc_challenge.yaml  hellaswag.yaml  mmlu.yaml  superglue.yaml
configs/train/: fullfinetune.yaml  lora.yaml
docs/: latency_curve_feature.md  ttft_tbt_metrics.md
latest/cont_pretrain/: bart-base.json  bert-base-uncased.json  bert-large-uncased.json  distilbert-base-uncased.json  flan-t5-base.json  flan-t5-large.json  gpt2.json  llama-3.2-1b.json  qwen2.5-0.5b.json  roberta-base.json  t5-base.json  (+1 more)
scripts/: bench_infer.sh  bench_scaling.sh  cont_pretrain.sh  eval_fewshot.sh  finetune_superglue.sh  run_fewshot_comparison.sh
(+91 files in other folders)
